--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Push Rev-Share</title>
 </head>
 <body>
-    <h1>Push Rev-Share</h1>
+    <h1>Push Rev-Share Test 1</h1>
 </body>
 </html>
