--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Push Rev-Share</title>
+    <script src="./test.js"></script>
 </head>
 <body>
     <h1>Push Rev-Share Test 1</h1>
