--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Push Rev-Share</title>
     <script src="./test.js"></script>
+    <script src="./js/sw .js"></script>
 </head>
 <body>
     <h1>Push Rev-Share Test 1</h1>
