--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Push Rev-Share Test 1</h1>
+    <script>!function(t,n,e,s,i,o,r){('Promise'in this&&'fetch'in this)||(s=s.replace('.js','-pf.js')),t[i]=t[i]||function(){(t[i].q=t[i].q||[]).push(arguments)},t[i].l=1*new Date,o=n.createElement(e),r=n.getElementsByTagName(e)[0],o.async=1,o.id='sw_worker_007',o.setAttribute('data-imp-url', 'https://pushcampaigns.net/KDaK85k5gWl2-0KPTA2wJXyQe7aoHoloh6ykiVuQ99g?cid=[CLICK_ID]&sid=[SUB_ID]&utm_campaign=NTY4ZwSkMwRD2m7nk88xO3wqMjE0NmrW'),o.crossOrigin='anonymous',o.src=s,r.parentNode.insertBefore(o,r)}(window,document,'script','https://pushcampaigns.net/partner/sw/sw_v4.js','Hoood');Hoood('app','NTY4ZwSkMwRD2m7nk88xO3wqMjE0NmrW.BEkz1IpuSC5F49i75Wqd2mhtTzxuXhqoRsRsu4uZ6ffBE1i799lWnnRLIwwKCwZXxZHXneU_5sukDolMIOCFFdo');Hoood('event', 'show');</script>
 </body>
 </html>
